--- a/any.css
+++ b/any.css
@@ -1,8 +1,8 @@
-/* Android tablet mode */
+/* Android / Windows tablet mode */
 @media all and (min-width:550px) {
 	#list{display:block; float:left; width:37%;}
 	#list #items{border-right:1px solid var(--list-right-border-color);}
-	#sub-panel{background-color:var(--background-color);}
+	.sub-panel{background-color:var(--background-color);}
 	#editor{display:block; float:right; width:63%;}
 	#settings{float:right; width:63%;}
 	.hide-btn img{opacity:0; cursor:default;}
